--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -10,10 +10,10 @@ body {
   display: block;
   text-align: right;
 }
-.header img {
+.header-img {
   width: 100%;
 }
-.header .more-info {
+.header-info {
   font-family: fantasy, cursive;
 }
 
@@ -36,17 +36,20 @@ body {
 .add-item-wrapper {
   display: flex;
 }
-ul {
+#incomplete-tasks,
+#completed-tasks {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.tasks-list,
+.edit-mode,
+.section-title {
   list-style:none;
 }
-input,button{
+.task-input,.button{
   outline:none;
 }
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -55,12 +58,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.section-title{
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -69,7 +71,8 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+#new-task,
+.task-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -81,21 +84,23 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+#new-task:focus,
+.task-input :focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.section-title {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.tasks-list,
+.edit-mode {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -104,47 +109,52 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task-checkbox,
+.task-label,
+.task-input,
+.button-delete,
+.button-edit,
+.button-delete-img{
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-checkbox {
   margin: 0 10px;
 }
-li > label {
+.task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >  input[type="text"] {
+.task-input{
   width: 226px
 }
-button.button-delete img {
+.button-delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.button-delete img:hover {
+.button-delete-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .task-label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.tasks-list .task-input {
   display:none
 }
 
-ul li.edit-mode input[type=text] {
+.edit-mode .task-input {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.edit-mode .task-label {
   display:none;
 }
