--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 .task-label {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .add-item-wrapper {
   display: flex;
@@ -128,7 +128,7 @@
   width: 226px;
 }
 .task-input{
-  width: 226px
+  width: 226px;
 }
 .button-delete-img {
   height: 2em;
@@ -141,18 +141,18 @@
 
 /* Completed */
 #completed-tasks .task-label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .tasks-list .task-input {
-  display: none
+  display: none;
 }
 
 .edit-mode .task-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode .task-label {
