refactor(extended-1.1): add semantic tags

--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@
 .header-info {
   font-family: fantasy, cursive;
 }
+.header-title-hidden {
+  display:none;
+}
 
 @media (max-width:768px) {
   .header { 
